--- a/MarkupXStyling/grid-module-design/grid-module.design.html
+++ b/MarkupXStyling/grid-module-design/grid-module.design.html
@@ -12,7 +12,7 @@
     <div class="col-w-60"></div>
     <div class="col-w-30 "></div>
     <div class="col-w-30"></div>
-    <div class="col-w-30 col-h-x2"></div>
+    <div class="col-w-30 col-h-x2 float-right"></div>
     <div class="col-w-60"></div>
     <div class="col-w-30"></div>
     <div class="col-w-30"></div>
